--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "MainDatabaseConnection": "Data Source=DESKTOP-QAMTDNI;Initial Catalog=SolutionTwoMainDatabase;Integrated Security=True;"
   },
+  "IdentityConfiguration": {
+    "JwtKey": "c59b5871-c948-40f1-8ffa-a45d1c92ae0a-e929e398-3e41-43be-8a77-9450d00796b8",
+    "JwtExpiresMinutes": "60",
+    "JwtIssuer": "localhost",
+    "JwtAudience": "localhost"
+  },
   "AllowedHosts": "*"
 }
