--- a/src/SolutionTwo.Common/SolutionTwo.Common.csproj
+++ b/src/SolutionTwo.Common/SolutionTwo.Common.csproj
@@ -7,8 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SolutionTwo.Data\SolutionTwo.Data.csproj"/>
-        <ProjectReference Include="..\SolutionTwo.Identity\SolutionTwo.Identity.csproj"/>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
