--- a/src/SolutionTwo.Data/SolutionTwo.Data.csproj
+++ b/src/SolutionTwo.Data/SolutionTwo.Data.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.16" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SolutionTwo.Common\SolutionTwo.Common.csproj" />
+    </ItemGroup>
+
 </Project>
