--- a/src/SolutionTwo.Api/SolutionTwo.Api.csproj
+++ b/src/SolutionTwo.Api/SolutionTwo.Api.csproj
@@ -8,16 +8,12 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.16" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.16">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.13" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SolutionTwo.Domain\SolutionTwo.Domain.csproj" />
+        <ProjectReference Include="..\SolutionTwo.Business\SolutionTwo.Business.csproj" />
     </ItemGroup>
 
 </Project>
