Added Unit tests for Business AuthService RefreshTokensPairAsync

--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -15,13 +15,16 @@
     "MainDatabaseConnection": "Data Source=DESKTOP-QAMTDNI;Initial Catalog=SolutionTwoMainDatabase;Integrated Security=True;"
   },
   "DatabaseConfiguration": {
-    
+    "CommandTimeOutInSeconds": 30
   },
-  "IdentityConfiguration": {
+  "JwtConfiguration": {
     "JwtKey": "c59b5871-c948-40f1-8ffa-a45d1c92ae0a-e929e398-3e41-43be-8a77-9450d00796b8",
     "JwtExpiresMinutes": "60",
     "JwtIssuer": "localhost",
     "JwtAudience": "localhost"
+  },
+  "AuthConfiguration": {
+    "RefreshTokenExpiresDays": "7"
   },
   "AllowedHosts": "*"
 }
