--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore": "None"
     },
-    "Debug": { 
+    "Debug": {
       "LogLevel": {
         "Microsoft.EntityFrameworkCore": "Debug"
       }
@@ -17,13 +17,11 @@
   "DatabaseConfiguration": {
     "CommandTimeOutInSeconds": 30
   },
-  "JwtConfiguration": {
+  "IdentityConfiguration": {
     "JwtKey": "c59b5871-c948-40f1-8ffa-a45d1c92ae0a-e929e398-3e41-43be-8a77-9450d00796b8",
     "JwtExpiresMinutes": "60",
     "JwtIssuer": "localhost",
-    "JwtAudience": "localhost"
-  },
-  "AuthConfiguration": {
+    "JwtAudience": "localhost",
     "RefreshTokenExpiresDays": "7"
   },
   "AllowedHosts": "*"
