--- a/src/SolutionTwo.Business.Core/SolutionTwo.Business.Core.csproj
+++ b/src/SolutionTwo.Business.Core/SolutionTwo.Business.Core.csproj
@@ -7,12 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.16"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.16"/>
+        <ProjectReference Include="..\SolutionTwo.Business.Common\SolutionTwo.Business.Common.csproj" />
+        <ProjectReference Include="..\SolutionTwo.Data\SolutionTwo.Data.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SolutionTwo.Common\SolutionTwo.Common.csproj"/>
+        <Folder Include="Configuration\" />
     </ItemGroup>
 
 </Project>
