--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -14,7 +14,7 @@
   "ConnectionStrings": {
     "MainDatabaseConnection": "Data Source=DESKTOP-QAMTDNI;Initial Catalog=SolutionTwoMainDatabase;Integrated Security=True;"
   },
-  "DatabaseConfiguration": {
+  "MainDatabaseConfiguration": {
     "CommandTimeOutInSeconds": 30
   },
   "IdentityConfiguration": {
