--- a/src/SolutionTwo.Business.Core/SolutionTwo.Business.Core.csproj
+++ b/src/SolutionTwo.Business.Core/SolutionTwo.Business.Core.csproj
@@ -8,7 +8,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\SolutionTwo.Business.Common\SolutionTwo.Business.Common.csproj" />
-        <ProjectReference Include="..\SolutionTwo.Data\SolutionTwo.Data.csproj" />
+        <ProjectReference Include="..\SolutionTwo.Data.MainDatabase\SolutionTwo.Data.MainDatabase.csproj" />
     </ItemGroup>
 
     <ItemGroup>
