--- a/src/SolutionTwo.Business.Identity/SolutionTwo.Business.Identity.csproj
+++ b/src/SolutionTwo.Business.Identity/SolutionTwo.Business.Identity.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
         <Folder Include="Models\" />
+        <Folder Include="Models\Auth\Incoming\" />
     </ItemGroup>
 
 </Project>
