--- a/src/Tests/Unit/SolutionTwo.Business.Identity.Tests/SolutionTwo.Business.Identity.Tests.csproj
+++ b/src/Tests/Unit/SolutionTwo.Business.Identity.Tests/SolutionTwo.Business.Identity.Tests.csproj
@@ -21,6 +21,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\SolutionTwo.Business.Identity\SolutionTwo.Business.Identity.csproj" />
+        <ProjectReference Include="..\SolutionTwo.Data.MainDatabase.InMemory\SolutionTwo.Data.MainDatabase.InMemory.csproj" />
     </ItemGroup>
 
 </Project>
