--- a/src/Tests/Unit/SolutionTwo.Data.InMemory.MainDatabase/SolutionTwo.Data.InMemory.MainDatabase.csproj
+++ b/src/Tests/Unit/SolutionTwo.Data.InMemory.MainDatabase/SolutionTwo.Data.InMemory.MainDatabase.csproj
@@ -8,7 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\SolutionTwo.Data.MainDatabase\SolutionTwo.Data.MainDatabase.csproj" />
-      <ProjectReference Include="..\SolutionTwo.Data.Common.InMemory\SolutionTwo.Data.Common.InMemory.csproj" />
+      <ProjectReference Include="..\SolutionTwo.Data.InMemory.Common\SolutionTwo.Data.InMemory.Common.csproj" />
     </ItemGroup>
 
 </Project>
