Applied error response and logs tracing changes

--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -9,6 +9,9 @@
       "LogLevel": {
         "Microsoft.EntityFrameworkCore": "Debug"
       }
+    },
+    "Console": {
+      "IncludeScopes": true
     }
   },
   "ConnectionStrings": {
