Changed EF Core logging config

--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -11,7 +11,11 @@
       }
     },
     "Console": {
-      "IncludeScopes": true
+      "IncludeScopes": true,
+      "LogLevel": {
+        "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+        "Microsoft.EntityFrameworkCore.Database.Transaction": "Information"
+      }
     }
   },
   "ConnectionStrings": {
