Added some dev testing staff

--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -11,10 +11,10 @@
       }
     },
     "Console": {
-      "IncludeScopes": true,
+      "IncludeScopes": false,
       "LogLevel": {
         "Microsoft.EntityFrameworkCore.Database.Command": "Information",
-        "Microsoft.EntityFrameworkCore.Database.Transaction": "Information"
+        "Microsoft.EntityFrameworkCore.Database.Transaction": "Debug"
       }
     }
   },
