Added hard coded identity and soft deletion

--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -31,5 +31,12 @@
     "JwtAudience": "localhost",
     "RefreshTokenExpiresDays": "7"
   },
+  "HardCodedIdentityConfiguration": {
+    "UseHardCodedIdentity": true,
+    "Username": "u1un",
+    "Roles": [
+      "SuperAdmin"
+    ]
+  },
   "AllowedHosts": "*"
 }
