--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -32,7 +32,7 @@
     "RefreshTokenExpiresDays": "7"
   },
   "HardCodedIdentityConfiguration": {
-    "UseHardCodedIdentity": true,
+    "UseHardCodedIdentity": false,
     "Username": "u1un",
     "Roles": [
       "SuperAdmin"
