--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -34,6 +34,7 @@
   "HardCodedIdentityConfiguration": {
     "UseHardCodedIdentity": false,
     "Username": "u1un",
+    "TenantId": "",
     "Roles": [
       "SuperAdmin"
     ]
