--- a/src/SolutionTwo.Data.Common.MultiTenancy/SolutionTwo.Data.Common.MultiTenancy.csproj
+++ b/src/SolutionTwo.Data.Common.MultiTenancy/SolutionTwo.Data.Common.MultiTenancy.csproj
@@ -7,8 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SolutionTwo.Business.Common\SolutionTwo.Business.Common.csproj" />
-        <ProjectReference Include="..\SolutionTwo.Data.MainDatabase\SolutionTwo.Data.MainDatabase.csproj" />
+      <ProjectReference Include="..\SolutionTwo.Data.Common\SolutionTwo.Data.Common.csproj" />
+      <ProjectReference Include="..\SolutionTwo.Common.MultiTenancy\SolutionTwo.Common.MultiTenancy.csproj" />
     </ItemGroup>
 
 </Project>
