--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -32,11 +32,11 @@
     "RefreshTokenExpiresDays": "7"
   },
   "HardCodedIdentityConfiguration": {
-    "UseHardCodedIdentity": false,
-    "Username": "u1un",
-    "TenantId": "",
+    "UseHardCodedIdentity": true,
+    "Username": "ut2",
+    "TenantId": "e9e67793-3905-4456-8cda-dedcd7e91d73",
     "Roles": [
-      "SuperAdmin"
+      "TenantAdmin"
     ]
   },
   "AllowedHosts": "*"
