Changed multi tenancy base filter logic

--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -32,7 +32,7 @@
     "RefreshTokenExpiresDays": "7"
   },
   "HardCodedIdentityConfiguration": {
-    "UseHardCodedIdentity": true,
+    "UseHardCodedIdentity": false,
     "Username": "ut2",
     "TenantId": "e9e67793-3905-4456-8cda-dedcd7e91d73",
     "Roles": [
