--- a/src/Tests/Unit/InMemoryDb/SolutionTwo.Data.InMemory.Common/SolutionTwo.Data.InMemory.Common.csproj
+++ b/src/Tests/Unit/InMemoryDb/SolutionTwo.Data.InMemory.Common/SolutionTwo.Data.InMemory.Common.csproj
@@ -7,8 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\SolutionTwo.Data.MainDatabase\SolutionTwo.Data.MainDatabase.csproj" />
-      <ProjectReference Include="..\SolutionTwo.Data.InMemory.Common\SolutionTwo.Data.InMemory.Common.csproj" />
+      <ProjectReference Include="..\..\..\..\SolutionTwo.Data.Common\SolutionTwo.Data.Common.csproj" />
     </ItemGroup>
 
 </Project>
