Added and used LoggedInUserAccessor and some other changes

--- a/src/SolutionTwo.Data.Common/SolutionTwo.Data.Common.csproj
+++ b/src/SolutionTwo.Data.Common/SolutionTwo.Data.Common.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SolutionTwo.Common.MultiTenancy\SolutionTwo.Common.MultiTenancy.csproj" />
+      <ProjectReference Include="..\SolutionTwo.Common\SolutionTwo.Common.csproj" />
     </ItemGroup>
 
 </Project>
