--- a/src/SolutionTwo.Api/SolutionTwo.Api.csproj
+++ b/src/SolutionTwo.Api/SolutionTwo.Api.csproj
@@ -20,7 +20,7 @@
         <ProjectReference Include="..\SolutionTwo.Business.Identity\SolutionTwo.Business.Identity.csproj" />
         <ProjectReference Include="..\SolutionTwo.Business.Core\SolutionTwo.Business.Core.csproj" />
         <ProjectReference Include="..\SolutionTwo.Business.MultiTenancy\SolutionTwo.Business.MultiTenancy.csproj" />
-        <ProjectReference Include="..\SolutionTwo.Common.MultiTenancy\SolutionTwo.Common.MultiTenancy.csproj" />
+        <ProjectReference Include="..\SolutionTwo.Common\SolutionTwo.Common.csproj" />
     </ItemGroup>
 
 </Project>
