Added product and related logic

--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -32,7 +32,7 @@
     "RefreshTokenExpiresDays": "7"
   },
   "HardCodedIdentityConfiguration": {
-    "UseHardCodedIdentity": false,
+    "UseHardCodedIdentity": true,
     "Username": "ut2",
     "UserId": "D8BB7620-8845-492C-BCD6-34CEFA3813CA",
     "TenantId": "e9e67793-3905-4456-8cda-dedcd7e91d73",
