Added basic auth plus some refactoring

--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -40,5 +40,9 @@
       "TenantAdmin"
     ]
   },
+  "BasicAuthenticationConfiguration": {
+    "Username": "admin",
+    "Password": "admin"
+  },
   "AllowedHosts": "*"
 }
