--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -41,8 +41,8 @@
     ]
   },
   "BasicAuthenticationConfiguration": {
-    "Username": "admin",
-    "Password": "admin"
+    "Username": "adm!n123",
+    "Password": "456@dmin"
   },
   "AllowedHosts": "*"
 }
