Config changes, empty function

--- a/src/SolutionTwo.Api/appsettings.json
+++ b/src/SolutionTwo.Api/appsettings.json
@@ -19,7 +19,7 @@
     }
   },
   "ConnectionStrings": {
-    "MainDatabaseConnection": "Data Source=DESKTOP-QAMTDNI;Initial Catalog=SolutionTwoMainDatabase;Integrated Security=True;"
+    "MainDatabaseConnection": "Data Source=SERVER-NAME;Initial Catalog=DB-NAME;Integrated Security=True;"
   },
   "MainDatabaseConfiguration": {
     "CommandTimeOutInSeconds": 30
@@ -32,12 +32,11 @@
     "RefreshTokenExpiresDays": "7"
   },
   "HardCodedIdentityConfiguration": {
-    "UseHardCodedIdentity": true,
-    "Username": "ut2",
-    "UserId": "D8BB7620-8845-492C-BCD6-34CEFA3813CA",
-    "TenantId": "e9e67793-3905-4456-8cda-dedcd7e91d73",
+    "UseHardCodedIdentity": false,
+    "Username": "",
+    "UserId": "",
+    "TenantId": "",
     "Roles": [
-      "TenantAdmin"
     ]
   },
   "BasicAuthenticationConfiguration": {
