--- a/src/SolutionTwo.Api/appsettings.Development.json
+++ b/src/SolutionTwo.Api/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MainDatabaseConnection": "Data Source=DESKTOP-QAMTDNI;Initial Catalog=SolutionTwoMainDatabase;Integrated Security=True;"
+  },
+  "HardCodedIdentityConfiguration": {
+    "UseHardCodedIdentity": true,
+    "Username": "ut2",
+    "UserId": "D8BB7620-8845-492C-BCD6-34CEFA3813CA",
+    "TenantId": "e9e67793-3905-4456-8cda-dedcd7e91d73",
+    "Roles": [
+      "TenantAdmin"
+    ]
   }
 }
