--- a/src/AzureFunctions/SolutionTwo.ProductForceReleaseFunctionApp/SolutionTwo.ProductForceReleaseFunctionApp.csproj
+++ b/src/AzureFunctions/SolutionTwo.ProductForceReleaseFunctionApp/SolutionTwo.ProductForceReleaseFunctionApp.csproj
@@ -6,6 +6,8 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="6.0.0" />
         <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
     </ItemGroup>
     <ItemGroup>
