--- a/devOps/build-pipeline.yml
+++ b/devOps/build-pipeline.yml
@@ -1,12 +1,12 @@
-trigger:
-  branches:
-    include:
-      - master
-
-pr:
-  branches:
-    include:
-      - master
+#trigger:
+#  branches:
+#    include:
+#      - master
+#
+#pr:
+#  branches:
+#    include:
+#      - master
 
 jobs:
 - job: Build
