--- a/devOps/build-pipeline.yml
+++ b/devOps/build-pipeline.yml
@@ -2,11 +2,19 @@ trigger:
   branches:
     include:
       - master
+  paths:
+    exclude:
+      - README.md
+      - devOps
 
 pr:
   branches:
     include:
       - master
+  paths:
+    exclude:
+      - README.md
+      - devOps
 
 jobs:
 - job: Build
