Added Integration tests - step 1

--- a/src/SolutionTwo.Api/SolutionTwo.Api.csproj
+++ b/src/SolutionTwo.Api/SolutionTwo.Api.csproj
@@ -23,4 +23,7 @@
         <ProjectReference Include="..\SolutionTwo.Common\SolutionTwo.Common.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="SolutionTwo.Api.Tests" />
+    </ItemGroup>
 </Project>
