Integration tests refactoring and helpers

--- a/devOps/build-pipeline.yml
+++ b/devOps/build-pipeline.yml
@@ -46,5 +46,5 @@ jobs:
     displayName: 'Run Unit Tests'
     inputs:
       command: test
-      projects: 'src/Tests/Unit/*.csproj'
+      projects: 'src/Tests/Unit/**/*.csproj'
       arguments: '--configuration Release'
